--- a/src/app/features/micros/pages/details/micro-details.component.html
+++ b/src/app/features/micros/pages/details/micro-details.component.html
@@ -1,1 +1,156 @@
-<p>Micros Details</p>
+<mat-card class="card-nuevo-micro" appearance="outlined">
+    <mat-card-header>
+        <mat-card-title>Micro {{ microForm.get('patente')?.value }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div class="action-buttons">
+            <button mat-raised-button color="primary" (click)="enableEdit()" *ngIf="!isEditing">Editar</button>
+            <button mat-raised-button color="accent" (click)="submit()" *ngIf="isEditing"
+                [disabled]="microForm.invalid || isSubmitting">
+                <mat-progress-spinner *ngIf="isSubmitting" diameter="20" mode="indeterminate"></mat-progress-spinner>
+                <span *ngIf="!isSubmitting">Guardar Cambios</span>
+            </button>
+            <button mat-button color="warn" (click)="cancel()" *ngIf="isEditing"
+                [disabled]="isSubmitting">Cancelar</button>
+        </div>
+
+
+        <h3 class="section-title">Datos del vehículo</h3>
+        <form [formGroup]="microForm" class="readonly-form">
+            <div class="form-row">
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Patente</mat-label>
+                    <input matInput formControlName="patente" />
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Marca</mat-label>
+                    <input matInput formControlName="marca" />
+                    <mat-error *ngIf="microForm.get('marca')?.hasError('maxlength')">
+                        La marca no puede superar los 64 caracteres
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Modelo</mat-label>
+                    <input matInput formControlName="modelo" />
+                    <mat-error *ngIf="microForm.get('modelo')?.hasError('maxlength')">
+                        El modelo no puede superar los 64 caracteres
+                    </mat-error>
+                </mat-form-field>
+            </div>
+
+            <div class="form-row">
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Cantidad de Asientos</mat-label>
+                    <input matInput formControlName="cantidadAsientos" />
+                    <mat-error *ngIf="microForm.get('cantidadAsientos')?.hasError('max')">
+                        El número máximo es de 70 asientos
+                    </mat-error>
+                    <mat-error *ngIf="microForm.get('cantidadAsientos')?.hasError('min')">
+                        El número mínimo es de 1 asiento
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Cantidad de Asientos Ocupados</mat-label>
+                    <input matInput formControlName="cantidadAsientosOcupados" />
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Está completo?</mat-label>
+                    <input matInput formControlName="estaCompleto" />
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Fecha de Alta</mat-label>
+                    <input matInput formControlName="fechaAlta" />
+                </mat-form-field>
+            </div>
+        </form>
+
+
+        <h3 class="section-title">Datos Chofer</h3>
+        <form [formGroup]="choferForm" class="readonly-form">
+            <div class="form-row">
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Seleccionado</mat-label>
+                    <input type="text" matInput [formControl]="autoCompleteChofer" [matAutocomplete]="auto"
+                        [disabled]="!isEditing" />
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFnChofer">
+                        @for (option of optionsChofer | async; track option) {
+                        <mat-option [value]="option">{{ option.dni }} - {{ option.nombre }} {{ option.apellido
+                            }}</mat-option>
+                        }
+                    </mat-autocomplete>
+                </mat-form-field>
+            </div>
+
+            <div class="form-row">
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Telefono</mat-label>
+                    <input matInput formControlName="telefono" />
+                </mat-form-field>
+
+                <mat-form-field appearance="fill" class="form-field">
+                    <mat-label>Clase Licencia</mat-label>
+                    <input matInput formControlName="claseLicencia" />
+                </mat-form-field>
+            </div>
+        </form>
+
+        <h3 class="section-title">Chicos Asignados</h3>
+        <div class="mat-elevation-z8">
+            <mat-form-field appearance="fill" class="form-field">
+                <mat-label>Filtrar</mat-label>
+                <input matInput (keyup)="applyFilterChicos($event)" placeholder="Carlos" #input>
+            </mat-form-field>
+
+            <table mat-table [dataSource]="chicosDataSource" matSort>
+
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox [(ngModel)]="row.seleccionado" [disabled]="!isEditing"></mat-checkbox>
+                    </td>
+                </ng-container>
+
+                <!-- DNI Column -->
+                <ng-container matColumnDef="dni">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div class="header-content">DNI </div>
+                    </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.dni }} </td>
+                </ng-container>
+
+                <!-- Nombre Column -->
+                <ng-container matColumnDef="nombre">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.nombre }} </td>
+                </ng-container>
+
+                <!-- Apellido Column -->
+                <ng-container matColumnDef="apellido">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.apellido }} </td>
+                </ng-container>
+
+                <!-- Header row -->
+                <tr mat-header-row *matHeaderRowDef="chicosDisplayedColumns"></tr>
+
+                <!-- Data rows -->
+                <tr mat-row *matRowDef="let row; columns: chicosDisplayedColumns" [hidden]="isLoading"></tr>
+
+                <!-- No data row -->
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">
+                        {{ input.value?.trim() ? 'No se encontraron datos con el filtro: "' + input.value + '"' : 'No se
+                        encontraron datos' }}
+                    </td>
+                </tr>
+            </table>
+
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select pages of user"></mat-paginator>
+        </div>
+    </mat-card-content>
+</mat-card>
