--- a/src/app/features/choferes/components/add-chofer-dialog/add-chofer-dialog.component.html
+++ b/src/app/features/choferes/components/add-chofer-dialog/add-chofer-dialog.component.html
@@ -8,16 +8,25 @@
     <mat-form-field appearance="fill" class="full-width">
         <mat-label>DNI</mat-label>
         <input matInput formControlName="dni" />
+        <mat-error *ngIf="choferForm.get('dni')?.hasError('maxlength')">
+            El nombre no puede superar los 16 caracteres.
+        </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
         <mat-label>Nombre</mat-label>
         <input matInput formControlName="nombre" />
+        <mat-error *ngIf="choferForm.get('nombre')?.hasError('maxlength')">
+            El nombre no puede superar los 128 caracteres.
+        </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
         <mat-label>Apellido</mat-label>
         <input matInput formControlName="apellido" />
+        <mat-error *ngIf="choferForm.get('apellido')?.hasError('maxlength')">
+            El apellido no puede superar los 128 caracteres.
+        </mat-error>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
@@ -31,11 +40,11 @@
 
     <mat-form-field appearance="fill" class="full-width">
         <mat-label>Telefono</mat-label>
-        <input matInput formControlName="telefono" />
+        <input matInput formControlName="telefono" type="number" />
+        <mat-error *ngIf="choferForm.get('telefono')?.hasError('max')">
+            El número no puede superar el máximo permitido
+        </mat-error>
     </mat-form-field>
-    <mat-error *ngIf="choferForm.get('telefono')?.hasError('pattern')">
-        Solo se permiten números
-    </mat-error>
 </form>
 
 <div mat-dialog-actions align="end">
